# HPCG

./: CMakeLists.txt  README.md  config
CMakeModules/: FindMYAOCL.cmake  FindMYMPI.cmake  FindMYOPENBLAS.cmake
